# mbase

./: .gitmodules  CLAUDE.md  CMakeLists.txt
natvis/: container.natvis
src/mbase/private/: format.cpp  hash.cpp  memory.cpp  trap.cpp
src/mbase/private/log/: log.cpp  log_c.cpp
src/mbase/private/profiling/: scoped_timer.cpp
src/mbase/public/: access.h  accessor.h  array_proxy.h  assert.h  bitflags.h  call.h  container.h  format.h  hash.h  log.h  platform.h  pp.h  profiling.h  trap.h  tsa.h  type_safety.h  type_util.h
src/mbase/public/algorithm/: my_ostream_joiner.h
src/mbase/public/com/: com-helper.h  com-refcount_template.h  com-weak.h  com.h
src/mbase/public/log/: log.h  log_c.h
src/mbase/public/math/: arithmetic.h
src/mbase/public/platform/: platform.h
src/mbase/public/profiling/: scoped_timer.h
